tests/Fixtures/views/errors/runtime_include.tpl
<h1>Wrapper</h1>
{include file="errors/included_broken.tpl"}
<p>after</p>
